<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_android"
    tools:context=".Login">

    <Button
        android:id="@+id/btn_login"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/aceptar"
        android:textColor="#6FC7FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724"
        app:strokeColor="#6FC7FA" />

    <TextView
        android:id="@+id/textView_usuario"
        android:layout_width="61dp"
        android:layout_height="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/usuario_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />

    <EditText
        android:id="@+id/usuario_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/nombre_usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#1976D2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.693"
        app:layout_constraintStart_toEndOf="@+id/textView_usuario"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/contrasena"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_usuario"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/btn_contrasena"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/contrasena_olv"
        android:textColor="#6FC7FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#6FC7FA"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_registrarse"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="Registrarse"
        android:text="@string/registrarse"
        android:textColor="#6FC7FA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#6FC7FA" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/contrasena_usario"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#1976D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toEndOf="@+id/textView_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/usuario_registro"
        app:layout_constraintVertical_bias="0.197" />
</androidx.constraintlayout.widget.ConstraintLayout>